--- a/config/app.config
+++ b/config/app.config
@@ -1,5 +1,17 @@
 [
  {
+   gadget,
+   [
+    %% Basic Auth
+    {github_user, "gadgetinaka"},
+    {github_password, "gogogadget"},
+    %% OAuth
+    {github_scope, "repo,user:email"},
+    {github_client_id, "256953043ffe168d4476"},
+    {github_client_secret, "524301cdfd9e58fc062137dadad30c6940fea907"}
+   ]
+ },
+ {
    elvis,
    [
     {config,
