--- a/config/app.config
+++ b/config/app.config
@@ -8,7 +8,14 @@
     %% OAuth
     {github_scope, "repo,user:email"},
     {github_client_id, "256953043ffe168d4476"},
-    {github_client_secret, "524301cdfd9e58fc062137dadad30c6940fea907"}
+    {github_client_secret, "524301cdfd9e58fc062137dadad30c6940fea907"},
+    %% Webhooks
+    {webhooks,
+      #{elvis => #{username  => "elvisinaka",
+                   url => "http://gadget.inakalabs.com/webhook/elvis"
+                  }
+       }
+    }
    ]
  },
  {
