--- a/config/app.config.template
+++ b/config/app.config.template
@@ -7,8 +7,8 @@
     {github_password, "gogogadget"},
     %% OAuth
     {github_scope, "repo,user:email"},
-    {github_client_id, "256953043ffe168d4476"},
-    {github_client_secret, "524301cdfd9e58fc062137dadad30c6940fea907"},
+    {github_client_id, ""},
+    {github_client_secret, ""},
     %% Webhooks
     {webhooks,
       #{elvis => #{username  => "elvisinaka",
