--- a/config/app.config.template
+++ b/config/app.config.template
@@ -34,7 +34,8 @@
                      {elvis_style, nesting_level, [3]},
                      {elvis_style, god_modules, [25]},
                      {elvis_style, no_if_expression, []},
-                     {elvis_style, invalid_dynamic_call, [elvis]},
+                     {elvis_style, invalid_dynamic_call, [
+                                    elvis, gadget_plain_dtl_handler]},
                      {elvis_style, used_ignored_variable, []},
                      {elvis_style, no_behavior_info, []},
                      {
