[#8] credentials are held on gadget, not on individual tools

--- a/config/app.config.template
+++ b/config/app.config.template
@@ -10,7 +10,10 @@
     {webhooks,
       #{elvis => "http://gadget.inakalabs.com/webhooks/elvis"
        }
-    }
+    },
+    %% Basic Auth
+    {github_user, "github-user"},
+    {github_password, "github-password"}
    ]
  },
  {
@@ -40,10 +43,7 @@
                      }
                     ]
        }
-    },
-    %% Basic Auth
-    {github_user, "gadget"},
-    {github_password, "gadgetpass"},
+    }
    ]
  },
  {
