[#22] Rebar as a dependency

--- a/relx.config
+++ b/relx.config
@@ -3,6 +3,8 @@
 
 {sys_config, "./config/app.config.template"}.
 
-{overlay, [{copy, "assets", "assets"}]}.
+{overlay, [ {copy, "assets", "assets"}
+          , {copy, "deps/rebar/rebar", "bin/rebar"}
+          ]}.
 
 {extended_start_script, true}.
