--- a/config/app.config.template
+++ b/config/app.config.template
@@ -3,7 +3,7 @@
    gadget,
    [
     %% OAuth
-    {github_scope, "repo,user:email"},
+    {github_scope, "public_repo,read:org"},
     {github_client_id, "bcn98345nv2098682c69"},
     {github_client_secret, "98vb98nbsbfgdjdlh87s986s08724958nfgdv"},
     %% Webhooks
