--- a/relx.config
+++ b/relx.config
@@ -5,6 +5,7 @@
 
 {overlay, [ {copy, "assets", "assets"}
           , {copy, "deps/rebar/rebar", "bin/rebar"}
+          , {copy, "priv/start.boot", "bin/start.boot"}
           ]}.
 
 {extended_start_script, true}.
