--- a/relx.config
+++ b/relx.config
@@ -1,5 +1,47 @@
 {release, {gadget, "0.1.1"},
- [gadget]}.
+  [ gadget
+  , {ic, none}
+  % , {asn1, none}
+  , {common_test, none}
+  , {cosEvent, none}
+  , {cosEventDomain, none}
+  , {cosFileTransfer, none}
+  , {cosNotification, none}
+  , {cosProperty, none}
+  , {cosTime, none}
+  , {cosTransactions, none}
+  , {debugger, none}
+  % , {dialyzer, none}
+  , {diameter, none}
+  , {edoc, none}
+  , {eldap, none}
+  , {erl_docgen, none}
+  , {et, none}
+  , {eunit, none}
+  % , {gs, none}
+  % , {hipe, none}
+  , {inets, none}
+  , {jinterface, none}
+  , {megaco, none}
+  , {observer, none}
+  , {odbc, none}
+  , {orber, none}
+  , {os_mon, none}
+  , {ose, none}
+  , {otp_mibs, none}
+  , {percept, none}
+  % , {public_key, none}
+  , {reltool, none}
+  , {runtime_tools, none}
+  , {snmp, none}
+  , {ssh, none}
+  % , {ssl, none}
+  , {test_server, none}
+  , {typer, none}
+  , {webtool, none}
+  % , {wx, none}
+  , {xmerl, none}
+  ]}.
 
 {sys_config, "./config/app.config.template"}.
 
