--- a/elvis.config
+++ b/elvis.config
@@ -18,11 +18,9 @@
                                     [gadget_plain_dtl_handler]},
                      {elvis_style, used_ignored_variable, []},
                      {elvis_style, no_behavior_info, []},
-                     {
-                       elvis_style,
-                       module_naming_convention,
-                       ["^([a-z][a-z0-9]*_?)*$", []]
-                     }
+                     {elvis_style, module_naming_convention,
+                    ["^([a-z][a-z0-9]*_?)*(_SUITE)?$", []]
+                  }
                     ]
        }
     }
