[Closes #80] Updated config values

--- a/config/app.config.template
+++ b/config/app.config.template
@@ -38,10 +38,10 @@
     {github_client_secret, "98vb98nbsbfgdjdlh87s986s08724958nfgdv"},
     %% Webhooks
     {webhooks,
-      #{elvis     => "http://gadget.inakalabs.com/webhooks/elvis",
-        compiler  => "http://gadget.inakalabs.com/webhooks/compiler",
-        xref      => "http://gadget.inakalabs.com/webhook/xref",
-        dialyzer  => "http://gadget.inakalabs.com/webhook/dialyzer"
+      #{elvis     => "http://gadget-internal.inakalabs.com/webhooks/elvis",
+        compiler  => "http://gadget-internal.inakalabs.com/webhooks/compiler",
+        xref      => "http://gadget-internal.inakalabs.com/webhook/xref",
+        dialyzer  => "http://gadget-internal.inakalabs.com/webhook/dialyzer"
        }
     },
     %% Basic Auth
