--- a/config/app.config.template
+++ b/config/app.config.template
@@ -38,8 +38,8 @@
     {github_client_secret, "98vb98nbsbfgdjdlh87s986s08724958nfgdv"},
     %% Webhooks
     {webhooks,
-      #{elvis     => "http://gadget.inakalabs.com/webhooks/elvis",
-        compiler  => "http://gadget.inakalabs.com/webhooks/compiler",
+      #{elvis     => "http://gadget.inakalabs.com/webhook/elvis",
+        compiler  => "http://gadget.inakalabs.com/webhook/compiler",
         xref      => "http://gadget.inakalabs.com/webhook/xref",
         dialyzer  => "http://gadget.inakalabs.com/webhook/dialyzer"
        }
@@ -102,6 +102,7 @@
    cowboy,
    [
     {http_port, 8080},
+    {http_host, "localhost"},
     {http_listener_count, 10}
    ]
  },
