--- a/config/app.config.template
+++ b/config/app.config.template
@@ -45,6 +45,7 @@
        }
     },
     {pr_actions, [<<"opened">>, <<"reopened">>, <<"synchronize">>]},
+    {valid_organizations, [<<"inaka">>, <<"nanoscopia">>, <<"esl">>]},
     %% Basic Auth
     {github_user, "github-user"},
     {github_password, "github-password"}
