--- a/config/app.config.template
+++ b/config/app.config.template
@@ -37,7 +37,7 @@
     {github_scope, "repo,repo:status,read:org"},
     {github_client_id, "bcn98345nv2098682c69"},
     {github_client_secret, "98vb98nbsbfgdjdlh87s986s08724958nfgdv"},
-    {status_details_url, "http://gadget.inakalabs.com/webhook/status-details/"},
+    {status_details_url, "http://gadget-internal.inakalabs.com/webhook/status-details/"},
     %% Webhooks
     {webhooks,
       #{elvis     => "http://gadget-internal.inakalabs.com/webhook/elvis",
