--- a/config/app.config.template
+++ b/config/app.config.template
@@ -34,6 +34,7 @@
    gadget,
    [
     %% OAuth
+    {default_verbosity, verbose},
     {github_scope, "public_repo,repo:status,read:org"},
     {github_client_id, "bcn98345nv2098682c69"},
     {github_client_secret, "98vb98nbsbfgdjdlh87s986s08724958nfgdv"},
