--- a/config/app.config.template
+++ b/config/app.config.template
@@ -41,11 +41,17 @@
     {status_details_url, "http://gadget.inakalabs.com/webhook/status-details/"},
     %% Webhooks
     {webhooks,
-      #{elvis     => "http://gadget.inakalabs.com/webhook/elvis",
-        compiler  => "http://gadget.inakalabs.com/webhook/compiler",
-        xref      => "http://gadget.inakalabs.com/webhook/xref",
-        dialyzer  => "http://gadget.inakalabs.com/webhook/dialyzer",
-        lewis     => "http://gadget.inakalabs.com/webhook/lewis"
+      %% Make sure to capitalize the values for the languages list
+      #{elvis     => #{url => "http://gadget.inakalabs.com/webhook/elvis",
+                       languages => [<<"Erlang">>]},
+        compiler  => #{url => "http://gadget.inakalabs.com/webhook/compiler",
+                       languages => [<<"Erlang">>]},
+        xref      => #{url => "http://gadget.inakalabs.com/webhook/xref",
+                       languages => [<<"Erlang">>]},
+        dialyzer  => #{url => "http://gadget.inakalabs.com/webhook/dialyzer",
+                       languages => [<<"Erlang">>]},
+        lewis     => #{url => "http://gadget.inakalabs.com/webhook/lewis",
+                       languages => [<<"Java">>]}
        }
     },
     {pr_actions, [<<"opened">>, <<"reopened">>, <<"synchronize">>]},
@@ -54,9 +60,6 @@
     {github_password, "github-password"},
     {android_sdk_path, "/Users/gadget/Library/Android/sdk/"},
     {android_ndk_path, "/Users/gadget/Library/Android/sdk/ndk-bundle"}
-    %% Supported languages
-    %% Make sure to capitalize the values within the list
-    {supported_languages, [<<"Android">>, <<"Erlang">>]}
    ]
  },
  {
