[#236] Rename gadget_repos model and move *_repo.erl to /repos folder

--- a/config/app.config.template
+++ b/config/app.config.template
@@ -23,7 +23,7 @@
     },
     {docs,
      [
-      {gadget_repos, gadget_store_mnesia},
+      {gadget_repo_tools, gadget_store_mnesia},
       {gadget_logs, gadget_store_mnesia}
      ]
     },
