[Close #267] status detail when github api fail

--- a/rebar.config
+++ b/rebar.config
@@ -25,7 +25,7 @@
 {deps, [
   {jiffy, "0.14.7"},
   {eper, {git, "https://github.com/massemanet/eper.git", {tag, "0.96.4"}}},
-  {egithub, "0.2.9"},
+  {egithub, "0.3.0"},
   {elvis, {git, "https://github.com/inaka/elvis.git", {tag, "0.2.11"}}},
   {cowboy, "1.0.4"},
   {lager, "3.2.1"},
@@ -43,6 +43,7 @@
   {test, [
     {deps, [
       {katana_test, "0.1.1"},
+      {meck, "0.8.4"},
       {mixer, {git, "https://github.com/inaka/mixer.git", {tag, "0.1.5"}}}
     ]}
   ]},
