--- a/rebar.config
+++ b/rebar.config
@@ -26,7 +26,8 @@
   {jiffy, "0.14.7"},
   {eper, {git, "https://github.com/massemanet/eper.git", {tag, "0.96.4"}}},
   {egithub, "0.3.1"},
-  {elvis, {git, "https://github.com/inaka/elvis.git", {tag, "0.2.12"}}},
+  {elvis_shell, {git, "https://github.com/inaka/elvis.git", {tag, "0.2.12"}}},
+  {elvis,   "0.3.2", {pkg, elvis_core}},
   {cowboy, "1.0.4"},
   {lager, "3.2.1"},
   {erlydtl, {git, "https://github.com/erlydtl/erlydtl.git", {tag, "0.11.1"}}},
