--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,3 +4,7 @@ services:
       build: .
       command: /usr/sbin/runsvdir-start
       container_name: gadget-internal_web
+      ports:
+         - "8082:8082"
+      volumes:
+         - /data/gadget:/gadget/db
