--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
     web:
       build: .
       command: /usr/sbin/runsvdir-start
-      container_name: gadget-internal_web
+      container_name: gadget_web
+      volumes:
+        - /gadget/db
       ports:
         - "8082:8082"
